final adjustments on navbar header bottom section and footer

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
         <a href="#"><img src="./images/logo.png" alt="Logo"></a>
       </div>
       <ul class="col-5 d-flex justify-content-start p-0 mb-0">
-        <li Class="px-2 font-weight-bold"><a class="link text-white" href="#">Shop by category ></a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link text-white" href="#">Home</a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link text-white" href="#">Support</a></li>
+        <li Class="px-2 font-weight-bold"><a class="link p-2 text-white" href="#">Shop by category</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link p-2  text-white" href="#">Home</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link p-2 text-white" href="#">Support</a></li>
       </ul>
       <ul class="col-6 d-flex justify-content-end p-0 mb-0 pr-4">
         <li Class="px-2">
-          <a class="text-white d-flex mt-1" href="#"><i class="d-none d-lg-block fas fa-user px-3 py-1"></i>
+          <a class="link p-2 text-white d-flex mt-1" href="#"><i class="d-none d-lg-block fas fa-user px-3 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Account</p>
           </a>
         </li>
-        <li Class="px-2"><a class="link text-white d-flex mt-1" href="#"><i
-              class="d-none d-lg-block fas fa-shopping-cart px-3 py-1"></i>
+        <li Class="px-2"><a class="link p-2  text-white d-flex mt-1" href="#"><i
+              class="d-none d-lg-block fas fa-shopping-cart px-2 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Cart</p>
           </a></li>
         <li Class="px-2 d-sd-block d-md-block d-lg-none"><a class="link text-white d-flex mt-1" href="#"><i
-              class="fas fa-bars px-3 py-1"></i></a></li>
+              class="fas fa-bars px-1 py-1"></i></a></li>
       </ul>
     </nav>
 
@@ -169,18 +169,17 @@
           </div>
           <div
             class="instrument drum-kits col-sm-12 col-md-4 d-flex flex-column align-items-center justify-content-center my-2">
-            <h3 class="h5 text-danger font-weight-bold">DRUM KITS.</h3>
+            <h3 class="h5 text-danger font-weight-bold">DRUM KITS</h3>
             <button type="button" class="btn-color text-white rounded border-0 p-1">Shop now</button>
           </div>
         </div>
       </section>
-      <section class="bottom-section bg-color4container-fluid row m-0 my-3 px-0 w-100">
-
-        <div class="slide container d-flex justify-content-center align-items-center w-100 h-100">
-          <div class="col-2 ">
+      <section class="bottom-section bg-color5 container-fluid row m-0 my-3 px-0 w-100">
+        <div class="slide container justify-content-center align-items-center w-100 h-100 mt-3">
+          <div class="col-2 d-flex justify-content-end">
             <a class="swipe" href="#"><i class="fa fa-chevron-left"></i></a>
           </div>
-          <div class="col-4 d-flex flex m-0">
+          <div class="col-4 d-flex flex m-0 px-0">
             <h2 class=" h4 tittle">STAFF PICK</h2>
             <div class="ad-image"><img src="./images/drums-staff-pick.jpg" alt="guitar"></div>
           </div>
@@ -196,7 +195,7 @@
               <button type="button" class="btn-color text-white rounded px-3 h-50">Add to cart</button>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-2 d-flex justify-content-start">
             <a class="swipe" href="#"><i class="fa fa-chevron-right"></i></a>
           </div>
         </div>
@@ -250,6 +249,7 @@
             </div>
           </div>
         </div>
+
         <div class="cols container-fluid row w-100 m-0 px-0 mt-3 col-lg-8">
           <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">About</h4>
