--- a/Search.html
+++ b/Search.html
@@ -30,22 +30,22 @@
         <img src=" ./images/logo.png" alt="Logo">
       </div>
       <ul class="col-5 d-flex justify-content-start p-0 mb-0">
-        <li Class="px-2 font-weight-bold"><a class=" text-white" href="#">Shop by category></a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Videos</a></li>
-        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="text-white" href="#">Support</a></li>
+        <li Class="px-2 font-weight-bold"><a class="link p-2 text-white" href="#">Shop by category</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link p-2  text-white" href="#">Home</a></li>
+        <li Class="px-2 font-weight-bold d-none d-lg-block"><a class="link p-2 text-white" href="#">Support</a></li>
       </ul>
       <ul class="col-6 d-flex justify-content-end p-0 mb-0 pr-4">
         <li Class="px-2">
-          <a class="text-white d-flex mt-1" href="#"><i class="d-none d-lg-block fas fa-user px-3 py-1"></i>
+          <a class="link p-2 text-white d-flex mt-1" href="#"><i class="d-none d-lg-block fas fa-user px-3 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Account</p>
           </a>
         </li>
-        <li Class="px-2"><a class="text-white d-flex mt-1" href="#"><i
-              class="d-none d-lg-block fas fa-shopping-cart px-3 py-1"></i>
+        <li Class="px-2"><a class="link p-2  text-white d-flex mt-1" href="#"><i
+              class="d-none d-lg-block fas fa-shopping-cart px-2 py-1"></i>
             <p class="text-white font-weight-bold d-none d-lg-block mb-0">Cart</p>
           </a></li>
-        <li Class="px-2 d-sd-block d-md-block d-lg-none"><a class="text-white d-flex mt-1" href="#"><i
-              class="fas fa-bars px-3 py-1"></i></a></li>
+        <li Class="px-2 d-sd-block d-md-block d-lg-none"><a class="link text-white d-flex mt-1" href="#"><i
+              class="fas fa-bars px-1 py-1"></i></a></li>
       </ul>
     </nav>
     <header class="main-bg-1 w-100 container-fluid m-0 px-0 row mt-4">
@@ -233,80 +233,88 @@
     </main>
     <footer>
       <div class="top-footer container-fluid row w-100 m-0 px-0">
-        <div class="footer-content d-flex justify-content-center align-items-center col-sd-12  w-100 m-1">
-          <div class="footer-col px-2">
-            <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
-            <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
-              <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
-                store located in Lima, Peru.</p>
-              <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels of
-                customer service during and after your purchase.</p>
-              <ul class="brand-icons d-flex">
-                <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-white"></i></a></li>
-                <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-white"></i></a></li>
-                <li><a class="px-2" href="#" title="Instagram"><i class="fab fa-instagram-square text-white"></i></a>
-                </li>
-              </ul>
+        <div class="top-footer container-fluid row w-100 m-0 px-0">
+          <div class="top-footer container-fluid row w-100 m-0 px-0">
+            <div
+              class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-lg-0 p-lg-0 col-lg-4">
+              <div class="footer-col px-4">
+                <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
+                <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
+                  <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
+                    store located in Lima, Peru.</p>
+                  <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels
+                    of
+                    customer service during and after your purchase.</p>
+                  <ul class="brand-icons d-flex">
+                    <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-white"></i></a></li>
+                    <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-white"></i></a>
+                    </li>
+                    <li><a class="px-2" href="#" title="Instagram"><i
+                          class="fab fa-instagram-square text-white"></i></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="cols container-fluid row w-100 m-0 px-0">
+            <div class="footer-col col-sd-12 col-md-3">
+              <h4 class="text-danger">About</h4>
+              <div class="footer-info d-none text-white d-md-block">
+                <ul class="fmenu text-white">
+                  <li><a class="text-white" href="#">About Us</a></li>
+                  <li><a class="text-white" href="#">Servicing & Repairs</a></li>
+                  <li><a class="text-white" href="#">Work for us!</a></li>
+                  <li><a class="text-white" href="#">AV Installations</a></li>
+                  <li><a class="text-white" href="#">Schools / Education</a></li>
+                  <li><a class="text-white" href="#">Rent Now</a></li>
+                  <li><a class="text-white" href="#">Trade-ins</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="footer-col col-sd-12 col-md-3">
+              <h4 class="text-danger">Support</h4>
+              <div class="footer-info d-none text-white d-md-block">
+                <ul class="fmenu text-white">
+                  <li><a class="text-white" href="#">Shipping & Returns</a></li>
+                  <li><a class="text-white" href="#">Payment Options</a></li>
+                  <li><a class="text-white" href="#">Privacy & Security</a></li>
+                  <li><a class="text-white" href="#">Terms & Conditions</a></li>
+                  <li><a class="text-white" href="#">Price Match Guarantee</a></li>
+                  <li><a class="text-white" href="#">My Account</a></li>
+                  <li><a class="text-white" href="#">COVID-19</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="footer-col col-sd-12 col-md-3">
+              <h4 class="text-danger">Contact</h4>
+              <div class="footer-info d-none text-white d-md-block">
+                <address>Av. Larco 2606, Miraflores</address>
+                <p><strong>Phone</strong> +51 2 6282 3199</p>
+                <p><strong>Fax</strong> +61 2 6282 5436</p>
+                <p><a class="text-white" href="#">Contact Us</a></p>
+              </div>
+            </div>
+
+            <div class="footer-col col.sd-12 col-md-3">
+              <h4 class="text-danger">Store hours</h4>
+              <div class="footer-info d-none text-white d-md-block">
+                <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
+                <p><strong>Fri</strong> 9:00am - 7:00pm</p>
+                <p><strong>Sat</strong> 9:00am - 4:00pm</p>
+                <p><strong>Sun</strong> Closed</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="cols container-fluid row w-100 m-0 px-0">
-          <div class="footer-col col-sd-12 col-md-3">
-            <h4 class="text-danger">About</h4>
-            <div class="footer-info d-none text-white d-md-block">
-              <ul class="fmenu text-white">
-                <li><a class="text-white" href="#">About Us</a></li>
-                <li><a class="text-white" href="#">Servicing & Repairs</a></li>
-                <li><a class="text-white" href="#">Work for us!</a></li>
-                <li><a class="text-white" href="#">AV Installations</a></li>
-                <li><a class="text-white" href="#">Schools / Education</a></li>
-                <li><a class="text-white" href="#">Rent Now</a></li>
-                <li><a class="text-white" href="#">Trade-ins</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="footer-col col-sd-12 col-md-3">
-            <h4 class="text-danger">Support</h4>
-            <div class="footer-info d-none text-white d-md-block">
-              <ul class="fmenu text-white">
-                <li><a class="text-white" href="#">Shipping & Returns</a></li>
-                <li><a class="text-white" href="#">Payment Options</a></li>
-                <li><a class="text-white" href="#">Privacy & Security</a></li>
-                <li><a class="text-white" href="#">Terms & Conditions</a></li>
-                <li><a class="text-white" href="#">Price Match Guarantee</a></li>
-                <li><a class="text-white" href="#">My Account</a></li>
-                <li><a class="text-white" href="#">COVID-19</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="footer-col col-sd-12 col-md-3">
-            <h4 class="text-danger">Contact</h4>
-            <div class="footer-info d-none text-white d-md-block">
-              <address>Av. Larco 2606, Miraflores</address>
-              <p><strong>Phone</strong> +51 2 6282 3199</p>
-              <p><strong>Fax</strong> +61 2 6282 5436</p>
-              <p><a class="text-white" href="#">Contact Us</a></p>
-            </div>
-          </div>
-
-          <div class="footer-col col.sd-12 col-md-3">
-            <h4 class="text-danger">Store hours</h4>
-            <div class="footer-info d-none text-white d-md-block">
-              <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
-              <p><strong>Fri</strong> 9:00am - 7:00pm</p>
-              <p><strong>Sat</strong> 9:00am - 4:00pm</p>
-              <p><strong>Sun</strong> Closed</p>
-            </div>
-          </div>
+        <div class="bottom-footer container-fluid row w-100 m-0 px-0">
+          <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
+            Music Store.
+            All rights reserved.</p>
         </div>
-      </div>
-      <div class="bottom-footer container-fluid row w-100 m-0 px-0">
-        <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
-          Music Store.
-          All rights reserved.</p>
-      </div>
     </footer>
   </div>
 </body>
