dix stylesheet font family and bg-color class

--- a/Search.html
+++ b/Search.html
@@ -49,9 +49,9 @@
       </ul>
     </nav>
     <header class="main-bg-1 w-100 container-fluid m-0 px-0 row mt-4">
-      <div class="logo-img m-0 p-0 d-flex justify-content-center align-items-center col-12 mt-5 pt-5">
-        <img src="./images/logo.png" alt="logo">
-        <h2 class="logo-name font-weight-bold text-white pt-2 px-1 text-center">JC Music Store</h2>
+      <div class="m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5 pt-5">
+        <img class="logo-img" src="./images/logo.png" alt="logo">
+        <h1 class="logo-name font-weight-bold text-white pt-2 px-1 text-center">JC Music Store</h1>
       </div>
       <div class="searchbox p-0 col 6 mt-5 pt-5">
         <h5 class="text-center p-1 m-0">Search results for guitars</h5>
@@ -64,7 +64,7 @@
     </header>
     <main class="search container-fluid px-0">
       <section>
-        <div class="toolbar w-100">
+        <div class="bg-color4 w-100">
           <div class="d-flex justify-content-between align-items-center bg-color2">
             <div>
               <span class="px-3">Refine</span>
