--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <button type="button" class="btn-color text-white rounded w-23 px-3 h-50">Learn More</button>
         </div>
       </section>
-      <div class="shipping bg-white border-bottom border-dark row w-100 m-0 my-2">
+      <div class="bg-color5 border-bottom border-dark row w-100 m-0 my-2">
         <ul class="row w-100 m-0 mt-3">
           <li class="col-12 col-md-6 col-lg-2 px-0 d-flex flex-column align-items-center"><a class="img-shipping py-2"
               href="#">
@@ -211,7 +211,7 @@
             </button>
           </div>
         </div>
-        <div class="brands container row m-0 px-0 w-100 col-12">
+        <div class="bg-color4 container row m-0 px-0 w-100 col-12">
           <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
             <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
                 src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
@@ -230,7 +230,7 @@
       </section>
     </main>
     <footer>
-      <div class="top-footer container-fluid row w-100 m-0 px-0">
+      <div class="top-footer bg-color1 container-fluid row w-100 m-0 px-0">
         <div
           class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-lg-0 p-lg-0 col-lg-4">
           <div class="footer-col px-4">
@@ -250,7 +250,7 @@
           </div>
         </div>
 
-        <div class="cols container-fluid row w-100 m-0 px-0 mt-3 col-lg-8">
+        <div class="container-fluid row w-100 m-0 px-0 mt-3 col-lg-8">
           <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">About</h4>
             <div class="footer-info d-none text-white d-md-block">
@@ -302,7 +302,7 @@
           </div>
         </div>
       </div>
-      <div class="bottom-footer container-fluid border-top row w-100 m-0 px-0">
+      <div class="bottom-footer bg-color1 container-fluid border-top row w-100 m-0 px-0">
         <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
           Music Store. All rights reserved.</p>
       </div>
