fix linter errors

--- a/Search.html
+++ b/Search.html
@@ -152,10 +152,9 @@
                     <div
                       class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
                       <p>$3,700.00</p>
-                      <button type="button" class="btn-color text-white rounded px-3 h-50">Buy</button>
+                      <button type="button" class="btn-color text-white rounded px-3 py-1 h-50">Buy</button>
                     </div>
                   </div>
-                  </a>
                 </div>
               </li>
               <li>
@@ -175,7 +174,7 @@
                       <div
                         class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
                         <p>$3,700.00</p>
-                        <button type="button" class="btn-color text-white rounded px-3 h-50">Buy</button>
+                        <div type="button" class="btn-color text-white rounded px-3 py-1 h-50">Buy</div>
                       </div>
                     </div>
                   </a>
@@ -198,7 +197,7 @@
                       <div
                         class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
                         <p>$3,700.00</p>
-                        <button type="button" class="btn-color text-white rounded px-3 h-50">Buy</button>
+                        <div type="button" class="btn-color text-white rounded px-3 py-1 h-50">Buy</div>
                       </div>
                     </div>
                   </a>
@@ -229,6 +228,7 @@
               </ul>
             </div>
           </div>
+        </div>
       </section>
     </main>
     <footer>
@@ -249,8 +249,9 @@
                     <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-white"></i></a></li>
                     <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-white"></i></a>
                     </li>
-                    <li><a class="px-2" href="#" title="Instagram"><i
-                          class="fab fa-instagram-square text-white"></i></a>
+                    <li><a class="px-2" href="#" title="Instagram">
+                        <i class="fab fa-instagram-square text-white"></i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -315,6 +316,7 @@
             Music Store.
             All rights reserved.</p>
         </div>
+      </div>
     </footer>
   </div>
 </body>
