fix search page linter errors

--- a/Search.html
+++ b/Search.html
@@ -197,7 +197,7 @@
                       <div
                         class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
                         <p>$3,700.00</p>
-                        <div type="button" class="btn-color text-white rounded px-3 py-1 h-50">Buy</div>
+                        <div class="btn-color text-white rounded px-3 py-1 h-50">Buy</div>
                       </div>
                     </div>
                   </a>
