fix footer on search page

--- a/Search.html
+++ b/Search.html
@@ -27,7 +27,7 @@
   <div class="main-container container-fluid p-0 m-0">
     <nav class="row navbar w-100 container-fluid mx-0 p-0 fixed-top">
       <div class="logo-img col-1 d-flex justify-content-center align-items-center w-50 h-50">
-        <img src=" ./images/logo.png" alt="Logo">
+        <a href="#"><img src="./images/logo.png" alt="Logo"></a>
       </div>
       <ul class="col-5 d-flex justify-content-start p-0 mb-0">
         <li Class="px-2 font-weight-bold"><a class="link p-2 text-white" href="#">Shop by category</a></li>
@@ -48,6 +48,7 @@
               class="fas fa-bars px-1 py-1"></i></a></li>
       </ul>
     </nav>
+
     <header class="main-bg-1 w-100 container-fluid m-0 px-0 row mt-4">
       <div class="m-0 p-0 d-flex justify-content-center align align-items-center col-12 mt-5 pt-5">
         <img class="logo-img" src="./images/logo.png" alt="logo">
@@ -233,7 +234,7 @@
     </main>
 
     <footer>
-      <div class="top-footer container-fluid row w-100 m-0 px-0">
+      <div class="top-footer bg-color1 container-fluid row w-100 m-0 px-0">
         <div class="top-footer container-fluid row w-100 m-0 px-0">
           <div class="top-footer container-fluid row w-100 m-0 px-0">
             <div
