--- a/Search.html
+++ b/Search.html
@@ -211,23 +211,21 @@
               </h3>
             </div>
           </div>
-          <div class="bottom-section container-fluid row m-0 px-0 w-100">
-            <div class="brands container row m-0 px-0 w-100 col-12">
-              <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
-                <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
-                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
-                <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Roland.jpg" alt="roland"></li>
-                <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
-                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Fender.jpg" alt="fender"></li>
-                <li class="d-none d-md-block col-md-3 d-lg-block col-lg-2"><a href="#"></a><img
-                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Gibson.jpg" alt="gibson"></li>
-                <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Ibanez.jpg" alt="ibanez"></li>
-                <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
-                    src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
-              </ul>
-            </div>
+          <div class="bg-color4 m-0 px-0 mx-0 w-100">
+            <ul class="row d-flex justify-content-center align-items-center px-2 my-0">
+              <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
+                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
+              <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Roland.jpg" alt="roland"></li>
+              <li class="col-6 col-md-3 col-lg-2"><a href="#"></a><img
+                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Fender.jpg" alt="fender"></li>
+              <li class="d-none d-md-block col-md-3 d-lg-block col-lg-2"><a href="#"></a><img
+                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Gibson.jpg" alt="gibson"></li>
+              <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Ibanez.jpg" alt="ibanez"></li>
+              <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
+                  src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Taylor.jpg" alt="taylor"></li>
+            </ul>
           </div>
         </div>
       </section>
@@ -235,89 +233,80 @@
 
     <footer>
       <div class="top-footer bg-color1 container-fluid row w-100 m-0 px-0">
-        <div class="top-footer container-fluid row w-100 m-0 px-0">
-          <div class="top-footer container-fluid row w-100 m-0 px-0">
-            <div
-              class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-lg-0 p-lg-0 col-lg-4">
-              <div class="footer-col px-4">
-                <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
-                <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
-                  <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
-                    store located in Lima, Peru.</p>
-                  <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels
-                    of
-                    customer service during and after your purchase.</p>
-                  <ul class="brand-icons d-flex">
-                    <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-white"></i></a></li>
-                    <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-white"></i></a>
-                    </li>
-                    <li><a class="px-2" href="#" title="Instagram">
-                        <i class="fab fa-instagram-square text-white"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="cols container-fluid row w-100 m-0 px-0">
-            <div class="footer-col col-sd-12 col-md-3">
-              <h4 class="text-danger">About</h4>
-              <div class="footer-info d-none text-white d-md-block">
-                <ul class="fmenu text-white">
-                  <li><a class="text-white" href="#">About Us</a></li>
-                  <li><a class="text-white" href="#">Servicing & Repairs</a></li>
-                  <li><a class="text-white" href="#">Work for us!</a></li>
-                  <li><a class="text-white" href="#">AV Installations</a></li>
-                  <li><a class="text-white" href="#">Schools / Education</a></li>
-                  <li><a class="text-white" href="#">Rent Now</a></li>
-                  <li><a class="text-white" href="#">Trade-ins</a></li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="footer-col col-sd-12 col-md-3">
-              <h4 class="text-danger">Support</h4>
-              <div class="footer-info d-none text-white d-md-block">
-                <ul class="fmenu text-white">
-                  <li><a class="text-white" href="#">Shipping & Returns</a></li>
-                  <li><a class="text-white" href="#">Payment Options</a></li>
-                  <li><a class="text-white" href="#">Privacy & Security</a></li>
-                  <li><a class="text-white" href="#">Terms & Conditions</a></li>
-                  <li><a class="text-white" href="#">Price Match Guarantee</a></li>
-                  <li><a class="text-white" href="#">My Account</a></li>
-                  <li><a class="text-white" href="#">COVID-19</a></li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="footer-col col-sd-12 col-md-3">
-              <h4 class="text-danger">Contact</h4>
-              <div class="footer-info d-none text-white d-md-block">
-                <address>Av. Larco 2606, Miraflores</address>
-                <p><strong>Phone</strong> +51 2 6282 3199</p>
-                <p><strong>Fax</strong> +61 2 6282 5436</p>
-                <p><a class="text-white" href="#">Contact Us</a></p>
-              </div>
-            </div>
-
-            <div class="footer-col col.sd-12 col-md-3">
-              <h4 class="text-danger">Store hours</h4>
-              <div class="footer-info d-none text-white d-md-block">
-                <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
-                <p><strong>Fri</strong> 9:00am - 7:00pm</p>
-                <p><strong>Sat</strong> 9:00am - 4:00pm</p>
-                <p><strong>Sun</strong> Closed</p>
-              </div>
+        <div
+          class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-lg-0 p-lg-0 col-lg-4">
+          <div class="footer-col px-4">
+            <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
+            <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
+              <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
+                store located in Lima, Peru.</p>
+              <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels of
+                customer service during and after your purchase.</p>
+              <ul class="brand-icons d-flex">
+                <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-white"></i></a></li>
+                <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-white"></i></a></li>
+                <li><a class="px-2" href="#" title="Instagram"><i class="fab fa-instagram-square text-white"></i></a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="bottom-footer container-fluid row w-100 m-0 px-0">
-          <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
-            Music Store.
-            All rights reserved.</p>
+
+        <div class="container-fluid row w-100 m-0 px-0 mt-3 col-lg-8">
+          <div class="footer-col col-sd-12 col-md-3 col-lg-3">
+            <h4 class="text-danger">About</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <ul class="fmenu text-white">
+                <li><a class="text-white" href="#">About Us</a></li>
+                <li><a class="text-white" href="#">Servicing & Repairs</a></li>
+                <li><a class="text-white" href="#">Work for us!</a></li>
+                <li><a class="text-white" href="#">AV Installations</a></li>
+                <li><a class="text-white" href="#">Schools / Education</a></li>
+                <li><a class="text-white" href="#">Rent Now</a></li>
+                <li><a class="text-white" href="#">Trade-ins</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-col col-sd-12 col-md-3 col-lg-3">
+            <h4 class="text-danger">Support</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <ul class="fmenu text-white">
+                <li><a class="text-white" href="#">Shipping & Returns</a></li>
+                <li><a class="text-white" href="#">Payment Options</a></li>
+                <li><a class="text-white" href="#">Privacy & Security</a></li>
+                <li><a class="text-white" href="#">Terms & Conditions</a></li>
+                <li><a class="text-white" href="#">Price Match Guarantee</a></li>
+                <li><a class="text-white" href="#">My Account</a></li>
+                <li><a class="text-white" href="#">COVID-19</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-col col-sd-12 col-md-3 col-lg-3">
+            <h4 class="text-danger">Contact</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <address>Av. Larco 2606, Miraflores</address>
+              <p><strong>Phone</strong> +51 2 6282 3199</p>
+              <p><strong>Fax</strong> +61 2 6282 5436</p>
+              <p><a class="text-white" href="#">Contact Us</a></p>
+            </div>
+          </div>
+
+          <div class="footer-col col.sd-12 col-md-3 col-lg-3">
+            <h4 class="text-danger">Store hours</h4>
+            <div class="footer-info d-none text-white d-md-block">
+              <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
+              <p><strong>Fri</strong> 9:00am - 7:00pm</p>
+              <p><strong>Sat</strong> 9:00am - 4:00pm</p>
+              <p><strong>Sun</strong> Closed</p>
+            </div>
+          </div>
         </div>
+      </div>
+      <div class="bottom-footer bg-color1 container-fluid border-top row w-100 m-0 px-0">
+        <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
+          Music Store. All rights reserved.</p>
       </div>
     </footer>
   </div>
