--- a/Search.html
+++ b/Search.html
@@ -63,7 +63,7 @@
         </div>
       </div>
     </header>
-    <main class="search container-fluid px-0">
+    <main class="search px-0 m-0">
       <section>
         <div class="bg-color4 w-100">
           <div class="d-flex justify-content-between align-items-center bg-color2">
@@ -80,7 +80,7 @@
             </div>
           </div>
         </div>
-        <div class="category-main container row p-0 mx-3">
+        <div class="category-main row p-0 mx-3">
           <div class="side-box col-4 d-flex flex-column align-items-start justify-content-start pr-0 my-3">
             <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Category</a>
@@ -139,10 +139,10 @@
               <li>
                 <div class="product-col d-md-flex mb-4 ml-4 bg-color5">
                   <a class="product-col d-md-flex" href="#"></a>
-                  <div class="product-img w-md-40">
+                  <div class="product-img w-md-40 pt-md-4">
                     <img src="./images/Heritage1.jpg" alt="guitar">
                   </div>
-                  <div class="product-details w-md-60 text-left text-dark pt-2 px-4 m-0">
+                  <div class="product-details w-md-60 mt-4 text-left text-dark pt-2 px-4 m-0">
                     <div class="d-flex align-center justify-content-between">
                       <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
                       <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
@@ -161,10 +161,10 @@
               <li>
                 <div class="product-col d-md-flex mb-4 ml-4 bg-color5">
                   <a class="product-col d-md-flex" href="#">
-                    <div class="product-img w-md-40">
+                    <div class="product-img pt-md-4 w-md-40">
                       <img src="./images/Heritage2.jpg" alt="guitar">
                     </div>
-                    <div class="product-details w-md-60 text-left text-dark pt-2 px-4 m-0">
+                    <div class="product-details w-md-60 mt-4 text-left text-dark pt-2 px-4 m-0">
                       <div class="d-flex align-center justify-content-between">
                         <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
                         <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
@@ -184,10 +184,10 @@
               <li>
                 <div class="product-col d-md-flex mb-4 ml-4 bg-color5">
                   <a class="product-col d-md-flex" href="#">
-                    <div class="product-img w-md-40">
+                    <div class="product-img pt-md-4 w-md-40">
                       <img src="./images/Heritage3.jpg" alt="guitar">
                     </div>
-                    <div class="product-details w-md-60 text-left text-dark pt-2 px-4 m-0">
+                    <div class="product-details w-md-60 mt-4 text-left text-dark pt-2 px-4 m-0">
                       <div class="d-flex align-center justify-content-between">
                         <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
                         <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
@@ -211,8 +211,8 @@
               </h3>
             </div>
           </div>
-          <div class="bg-color4 m-0 px-0 mx-0 w-100">
-            <ul class="row d-flex justify-content-center align-items-center px-2 my-0">
+          <div class="bg-color4 container-fluid m-0 px-0 w-100 py-2 col-12">
+            <ul class=" d-flex justify-content-center align-items-center col-12 px-2 my-0">
               <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
                   src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
               <li class="d-none d-lg-block col-lg-2"><a href="#"></a><img
@@ -232,38 +232,37 @@
     </main>
 
     <footer>
-      <div class="top-footer bg-color1 container-fluid row w-100 m-0 px-0">
-        <div
-          class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-lg-0 p-lg-0 col-lg-4">
+      <div class="top-footer bg-color5 container-fluid row m-0 px-0">
+        <div class="footer-content d-flex justify-content-center align-items-center col-sd-12  m-lg-0 p-lg-0 col-lg-4">
           <div class="footer-col px-4">
             <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
-            <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
+            <div class="footer-info d-flex justify-content-center align-items-start flex-column text-dark pt-2">
               <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
                 store located in Lima, Peru.</p>
               <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels of
                 customer service during and after your purchase.</p>
               <ul class="brand-icons d-flex">
-                <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-white"></i></a></li>
-                <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-white"></i></a></li>
-                <li><a class="px-2" href="#" title="Instagram"><i class="fab fa-instagram-square text-white"></i></a>
+                <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-dark"></i></a></li>
+                <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-dark"></i></a></li>
+                <li><a class="px-2" href="#" title="Instagram"><i class="fab fa-instagram-square text-dark"></i></a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
 
-        <div class="container-fluid row w-100 m-0 px-0 mt-3 col-lg-8">
+        <div class="container-fluid row w-100 m-0 px-0 pl-4 pl-md-0 mt-3 col-lg-8">
           <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">About</h4>
-            <div class="footer-info d-none text-white d-md-block">
-              <ul class="fmenu text-white">
-                <li><a class="text-white" href="#">About Us</a></li>
-                <li><a class="text-white" href="#">Servicing & Repairs</a></li>
-                <li><a class="text-white" href="#">Work for us!</a></li>
-                <li><a class="text-white" href="#">AV Installations</a></li>
-                <li><a class="text-white" href="#">Schools / Education</a></li>
-                <li><a class="text-white" href="#">Rent Now</a></li>
-                <li><a class="text-white" href="#">Trade-ins</a></li>
+            <div class="footer-info d-none d-md-block">
+              <ul class="fmenu">
+                <li><a class="text-dark" href="#">About Us</a></li>
+                <li><a class="text-dark" href="#">Servicing & Repairs</a></li>
+                <li><a class="text-dark" href="#">Work for us!</a></li>
+                <li><a class="text-dark" href="#">AV Installations</a></li>
+                <li><a class="text-dark" href="#">Schools / Education</a></li>
+                <li><a class="text-dark" href="#">Rent Now</a></li>
+                <li><a class="text-dark" href="#">Trade-ins</a></li>
               </ul>
             </div>
           </div>
@@ -271,31 +270,31 @@
           <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Support</h4>
             <div class="footer-info d-none text-white d-md-block">
-              <ul class="fmenu text-white">
-                <li><a class="text-white" href="#">Shipping & Returns</a></li>
-                <li><a class="text-white" href="#">Payment Options</a></li>
-                <li><a class="text-white" href="#">Privacy & Security</a></li>
-                <li><a class="text-white" href="#">Terms & Conditions</a></li>
-                <li><a class="text-white" href="#">Price Match Guarantee</a></li>
-                <li><a class="text-white" href="#">My Account</a></li>
-                <li><a class="text-white" href="#">COVID-19</a></li>
+              <ul class="fmenu">
+                <li><a class="text-dark" href="#">Shipping & Returns</a></li>
+                <li><a class="text-dark" href="#">Payment Options</a></li>
+                <li><a class="text-dark" href="#">Privacy & Security</a></li>
+                <li><a class="text-dark" href="#">Terms & Conditions</a></li>
+                <li><a class="text-dark" href="#">Price Match Guarantee</a></li>
+                <li><a class="text-dark" href="#">My Account</a></li>
+                <li><a class="text-dark" href="#">COVID-19</a></li>
               </ul>
             </div>
           </div>
 
           <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Contact</h4>
-            <div class="footer-info d-none text-white d-md-block">
+            <div class="footer-info d-none text-dark d-md-block">
               <address>Av. Larco 2606, Miraflores</address>
-              <p><strong>Phone</strong> +51 2 6282 3199</p>
-              <p><strong>Fax</strong> +61 2 6282 5436</p>
-              <p><a class="text-white" href="#">Contact Us</a></p>
+              <p><strong>Phone</strong> +51 962823193</p>
+              <p><strong>Fax</strong> +51 2825436</p>
+              <p><a class="text-dark" href="#">Contact Us</a></p>
             </div>
           </div>
 
           <div class="footer-col col.sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Store hours</h4>
-            <div class="footer-info d-none text-white d-md-block">
+            <div class="footer-info d-none text-dark d-md-block">
               <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
               <p><strong>Fri</strong> 9:00am - 7:00pm</p>
               <p><strong>Sat</strong> 9:00am - 4:00pm</p>
@@ -304,8 +303,8 @@
           </div>
         </div>
       </div>
-      <div class="bottom-footer bg-color1 container-fluid border-top row w-100 m-0 px-0">
-        <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
+      <div class="bottom-footer bg-color5 container-fluid border-top row w-100 m-0 px-0">
+        <p class="copyright col-12 d-flex justify-content-center align-items-center text-dark px-0 pt-2">© 2020 JC
           Music Store. All rights reserved.</p>
       </div>
     </footer>
