--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </button>
           </div>
         </div>
-        <div class="bg-color4 container row m-0 px-0 w-100 py-2 col-12">
+        <div class="bg-color4 container-fluid m-0 px-0 w-100 py-2 col-12">
           <ul class="row d-flex justify-content-center align-items-center col-12 px-2 my-0">
             <li class="col-6 col-md-3 col-lg-2 pl-4"><a href="#"></a><img
                 src="https://www.bettermusic.com.au/media/wysiwyg/home/brands/Yamaha.jpg" alt="yamaha"></li>
