--- a/Search.html
+++ b/Search.html
@@ -232,19 +232,20 @@
     </main>
 
     <footer>
-      <div class="top-footer bg-color5 container-fluid row m-0 px-0">
-        <div class="footer-content d-flex justify-content-center align-items-center col-sd-12  m-lg-0 p-lg-0 col-lg-4">
+      <div class="top-footer bg-color2 container-fluid row w-100 m-0 px-0">
+        <div
+          class="footer-content d-flex justify-content-center align-items-center col-sd-12 w-100 m-lg-0 p-lg-0 col-lg-4">
           <div class="footer-col px-4">
             <h4 class="text-danger pt-3">JC MUSIC STORE</h4>
-            <div class="footer-info d-flex justify-content-center align-items-start flex-column text-dark pt-2">
+            <div class="footer-info d-flex justify-content-center align-items-start flex-column text-white pt-2">
               <p>First opened over 3 years ago, JC Music Store is an Peruvian owned and operated independent music
                 store located in Lima, Peru.</p>
               <p>We aim to provide the largest range of quality musical instruments, lowest prices and high levels of
                 customer service during and after your purchase.</p>
               <ul class="brand-icons d-flex">
-                <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-dark"></i></a></li>
-                <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-dark"></i></a></li>
-                <li><a class="px-2" href="#" title="Instagram"><i class="fab fa-instagram-square text-dark"></i></a>
+                <li><a class="px-2" href="#" title="Facebook"><i class="fab fa-facebook-f text-danger"></i></a></li>
+                <li><a class="px-2" href="#" title="Youtube"><i class="fab fa-youtube-square text-danger"></i></a></li>
+                <li><a class="px-2" href="#" title="Instagram"><i class="fab fa-instagram-square text-danger"></i></a>
                 </li>
               </ul>
             </div>
@@ -256,13 +257,13 @@
             <h4 class="text-danger">About</h4>
             <div class="footer-info d-none d-md-block">
               <ul class="fmenu">
-                <li><a class="text-dark" href="#">About Us</a></li>
-                <li><a class="text-dark" href="#">Servicing & Repairs</a></li>
-                <li><a class="text-dark" href="#">Work for us!</a></li>
-                <li><a class="text-dark" href="#">AV Installations</a></li>
-                <li><a class="text-dark" href="#">Schools / Education</a></li>
-                <li><a class="text-dark" href="#">Rent Now</a></li>
-                <li><a class="text-dark" href="#">Trade-ins</a></li>
+                <li><a class="text-white" href="#">About Us</a></li>
+                <li><a class="text-white" href="#">Servicing & Repairs</a></li>
+                <li><a class="text-white" href="#">Work for us!</a></li>
+                <li><a class="text-white" href="#">AV Installations</a></li>
+                <li><a class="text-white" href="#">Schools / Education</a></li>
+                <li><a class="text-white" href="#">Rent Now</a></li>
+                <li><a class="text-white" href="#">Trade-ins</a></li>
               </ul>
             </div>
           </div>
@@ -271,30 +272,30 @@
             <h4 class="text-danger">Support</h4>
             <div class="footer-info d-none text-white d-md-block">
               <ul class="fmenu">
-                <li><a class="text-dark" href="#">Shipping & Returns</a></li>
-                <li><a class="text-dark" href="#">Payment Options</a></li>
-                <li><a class="text-dark" href="#">Privacy & Security</a></li>
-                <li><a class="text-dark" href="#">Terms & Conditions</a></li>
-                <li><a class="text-dark" href="#">Price Match Guarantee</a></li>
-                <li><a class="text-dark" href="#">My Account</a></li>
-                <li><a class="text-dark" href="#">COVID-19</a></li>
+                <li><a class="text-white" href="#">Shipping & Returns</a></li>
+                <li><a class="text-white" href="#">Payment Options</a></li>
+                <li><a class="text-white" href="#">Privacy & Security</a></li>
+                <li><a class="text-white" href="#">Terms & Conditions</a></li>
+                <li><a class="text-white" href="#">Price Match Guarantee</a></li>
+                <li><a class="text-white" href="#">My Account</a></li>
+                <li><a class="text-white" href="#">COVID-19</a></li>
               </ul>
             </div>
           </div>
 
           <div class="footer-col col-sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Contact</h4>
-            <div class="footer-info d-none text-dark d-md-block">
+            <div class="footer-info d-none text-white d-md-block">
               <address>Av. Larco 2606, Miraflores</address>
               <p><strong>Phone</strong> +51 962823193</p>
               <p><strong>Fax</strong> +51 2825436</p>
-              <p><a class="text-dark" href="#">Contact Us</a></p>
+              <p><a class="text-white" href="#">Contact Us</a></p>
             </div>
           </div>
 
           <div class="footer-col col.sd-12 col-md-3 col-lg-3">
             <h4 class="text-danger">Store hours</h4>
-            <div class="footer-info d-none text-dark d-md-block">
+            <div class="footer-info d-none text-white d-md-block">
               <p><strong>Mon-Thur</strong> 9:00am - 5:30pm</p>
               <p><strong>Fri</strong> 9:00am - 7:00pm</p>
               <p><strong>Sat</strong> 9:00am - 4:00pm</p>
@@ -303,8 +304,8 @@
           </div>
         </div>
       </div>
-      <div class="bottom-footer bg-color5 container-fluid border-top row w-100 m-0 px-0">
-        <p class="copyright col-12 d-flex justify-content-center align-items-center text-dark px-0 pt-2">© 2020 JC
+      <div class="bottom-footer bg-color2 container-fluid border-top row w-100 m-0 px-0">
+        <p class="copyright col-12 d-flex justify-content-center align-items-center text-white px-0 pt-2">© 2020 JC
           Music Store. All rights reserved.</p>
       </div>
     </footer>
