edit search page's buttons on small views

--- a/Search.html
+++ b/Search.html
@@ -84,25 +84,25 @@
           <div class="side-box col-4 d-flex flex-column align-items-start justify-content-start pr-0 my-3">
             <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Category</a>
-              <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
+              <i class="fas fa-chevron-circle-right text-dark pl-sm-1 pr-2 py-1"></i>
             </div>
             <div class="list-box my-1">
               <ul class="border-light">
-                <li><a class="text-dark px-3" href="#">Electric</a>(311)
+                <li><a class="text-dark px-2" href="#">Electric</a>(111)
                 </li>
-                <li><a class="text-dark px-3" href="#">Acoustic</a>(200)
+                <li><a class="text-dark px-2" href="#">Acoustic</a>(90)
                 </li>
-                <li><a class="text-dark px-3" href="#">Bass</a>(49)
+                <li><a class="text-dark px-2" href="#">Bass</a>(49)
                 </li>
-                <li><a class="text-dark px-3" href="#">Amps</a>(17)
+                <li><a class="text-dark px-2" href="#">Amps</a>(17)
                 </li>
-                <li><a class="text-dark px-3" href="#">Pianos</a>(10)
+                <li><a class="text-dark px-2" href="#">Pianos</a>(10)
                 </li>
-                <li><a class="text-dark px-3" href="#">Pedals</a>(46)
+                <li><a class="text-dark px-2" href="#">Pedals</a>(46)
                 </li>
-                <li><a class="text-dark px-3" href="#">Drums</a>(1)
+                <li><a class="text-dark px-2" href="#">Drums</a>(1)
                 </li>
-                <li><a class="text-dark px-3" href="#">Staff Pick</a>(4)
+                <li><a class="text-dark px-2" href="#">Staff Pick</a>(4)
                 </li>
               </ul>
             </div>
@@ -111,27 +111,33 @@
               <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
             </div>
             <fieldset class="d-flex">
-              <label class="px-2"><input type="checkbox" /> Fender</label>
-              <label class="px-2"><input type="checkbox" /> Gibson</label>
-              <label class="px-2"><input type="checkbox" /> Taylor</label>
+              <div class="flex-column">
+                <label class="px-2"><input type="checkbox" /> Fender</label>
+                <label class="px-2"><input type="checkbox" /> Gibson</label>
+                <label class="px-2"><input type="checkbox" /> Taylor</label>
+              </div>
             </fieldset>
             <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Color</a>
               <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
             </div>
             <fieldset class="d-flex">
-              <label class="px-2"><input type="checkbox" /> Red</label>
-              <label class="px-2"><input type="checkbox" /> Black</label>
-              <label class="px-2"><input type="checkbox" /> White</label>
+              <div class="flex-column">
+                <label class="px-2"><input type="checkbox" /> Red</label>
+                <label class="px-2"><input type="checkbox" /> Black</label>
+                <label class="px-2"><input type="checkbox" /> White</label>
+              </div>
             </fieldset>
             <div class="block-title w-100 py-2 bg-color3 d-flex justify-content-between">
               <a class="text-white px-2" href="#">Price</a>
               <i class="fas fa-chevron-circle-right text-dark px-2 py-1"></i>
             </div>
             <fieldset class="d-flex">
-              <label class="px-2"><input type="checkbox" /> $1,500 - 2,500</label>
-              <label class="px-2"><input type="checkbox" /> $2,500 - 3,500</label>
-              <label class="px-2"><input type="checkbox" /> $ 3,500 +</label>
+              <div class="flex-column">
+                <label class="px-2"><input type="checkbox" /> $1,500 - 2,500</label>
+                <label class="px-2"><input type="checkbox" /> $2,500 - 3,500</label>
+                <label class="px-2"><input type="checkbox" /> $ 3,500 +</label>
+              </div>
             </fieldset>
           </div>
           <div class="product-list-box row col-8 d-flex mx-0 my-3">
@@ -145,15 +151,15 @@
                   <div class="product-details w-md-60 mt-4 text-left text-dark pt-2 px-4 m-0">
                     <div class="d-flex align-center justify-content-between">
                       <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
-                      <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
+                      <span class="mx-2 btn btn-add"><i class="fas fa-plus secondary-color"></i>
                       </span>
                     </div>
                     <p class="mb-0">Heritage Guitars Artisan Aged Collection H-150 Electric Guitar w/Case - Original
                       Sunburst</p>
                     <div
-                      class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
+                      class="d-sm-flex flex-sm-column flex-lg-row justify-content-lg-between text-center text-danger font-weight-bold my-3">
                       <p>$3,700.00</p>
-                      <button type="button" class="btn-color text-white rounded px-3 py-1 h-50">Buy</button>
+                      <div class="btn-color text-white rounded mx-2 my-1 px-3 py-1 h-50">Buy</div>
                     </div>
                   </div>
                 </div>
@@ -167,15 +173,15 @@
                     <div class="product-details w-md-60 mt-4 text-left text-dark pt-2 px-4 m-0">
                       <div class="d-flex align-center justify-content-between">
                         <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
-                        <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
+                        <span class="mx-2 btn btn-add"><i class="fas fa-plus secondary-color"></i>
                         </span>
                       </div>
                       <p class="mb-0">Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Trans
                         Cherryt</p>
                       <div
-                        class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
+                        class="d-sm-flex flex-sm-column flex-lg-row justify-content-lg-between text-center text-danger font-weight-bold my-3">
                         <p>$3,700.00</p>
-                        <div class="btn-color text-white rounded px-3 py-1 h-50">Buy</div>
+                        <div class="btn-color text-white rounded mx-2 my-1 px-3 py-1 h-50">Buy</div>
                       </div>
                     </div>
                   </a>
@@ -190,15 +196,15 @@
                     <div class="product-details w-md-60 mt-4 text-left text-dark pt-2 px-4 m-0">
                       <div class="d-flex align-center justify-content-between">
                         <h4 class="h6 font-weight-bold">Heritage Guitars</h4>
-                        <span class="btn btn-add"><i class="fas fa-plus secondary-color"></i>
+                        <span class="mx-2 btn btn-add"><i class="fas fa-plus secondary-color"></i>
                         </span>
                       </div>
                       <p class="mb-0">Heritage Guitars Artisan Aged Collection H-535 Electric Guitar w/Case - Trans
                         Cherryt</p>
                       <div
-                        class="text-center text-danger font-weight-bold my-3 d-flex align-center justify-content-between">
+                        class="d-sm-flex flex-sm-column flex-lg-row justify-content-lg-between text-center text-danger font-weight-bold my-3">
                         <p>$3,700.00</p>
-                        <div class="btn-color text-white rounded px-3 py-1 h-50">Buy</div>
+                        <div class="btn-color text-white rounded mx-2 my-1 px-3 py-1 h-50">Buy</div>
                       </div>
                     </div>
                   </a>
@@ -287,7 +293,7 @@
             <h4 class="text-danger">Contact</h4>
             <div class="footer-info d-none text-white d-md-block">
               <address>Av. Larco 2606, Miraflores</address>
-              <p><strong>Phone</strong> +51 962823193</p>
+              <p><strong>Phone</strong> +51 96223193</p>
               <p><strong>Fax</strong> +51 2825436</p>
               <p><a class="text-white" href="#">Contact Us</a></p>
             </div>
