edit button learn more on small view

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p class="col-12 col-md-4 px-0"><i class="text-danger fas fa-check px-2"></i>Curb Side Shopping</p>
         </div>
         <div class="col-12 d-flex justify-content-center rounded mx-0 mb-3 px-0">
-          <button type="button" class="btn-color text-white rounded w-23 px-3 h-50">Learn More</button>
+          <button type="button" class="btn-color text-white rounded w-23 px-3 pb-2 h-50">Learn More</button>
         </div>
       </section>
       <div class="bg-color5 border-bottom border-dark row w-100 m-0 my-2">
